feat(health): add health check
